@@ -79,6 +79,9 @@ New Features
 * SOLR-6273: Cross Data Center Replication. Active/passive replication for separate
   SolrClouds hosted on separate data centers. (Renaud Delbru, Yonik Seeley via Erick Erickson)
 
+* SOLR-7389: Expose znodeVersion property for each of the collections returned for the clusterstatus
+  operation in the collections API (Marius Grama via shalin)
+
 Bug Fixes
 ----------------------
 (no changes)
